# khi_robot

./: .travis.yml  LICENSE  README.md
duaro_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
duaro_description/meshes/: WD002N_A201U_J1_obstacle_Ver2m.stl  WD002N_A201_Adjuster_pad_Ver2m.stl  WD002N_A202L_J3_obstaclem.stl  WD002N_A202L_J3m.stl  WD002N_A202U_J2m.stl  pedestal_obstacle.stl
duaro_description/tests/: roslaunch_test_duaro.xml
duaro_description/urdf/: duaro.urdf.xacro  duaro_macro.xacro
khi_duaro_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
khi_duaro_gazebo/config/: duaro_gazebo_control.yaml
khi_duaro_gazebo/launch/: duaro_gazebo_control.launch  duaro_world.launch
khi_duaro_gazebo/script/: go_initial.sh
khi_duaro_ikfast_plugin/: CHANGELOG.rst  CMakeLists.txt  package.xml
khi_duaro_ikfast_plugin/src/: duaro_upper_arm_ikfast_moveit_plugin.cpp  duaro_upper_arm_ikfast_solver.cpp
khi_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
khi_robot_bringup/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
khi_robot_bringup/config/: duaro_controllers.yaml  rs007l_controllers.yaml  rs007n_controllers.yaml  rs013n_controllers.yaml  rs020n_controllers.yaml  rs025n_controllers.yaml  rs030n_controllers.yaml  rs080n_controllers.yaml
khi_robot_bringup/launch/: duaro_bringup.launch  rs007l_bringup.launch  rs007n_bringup.launch  rs013n_bringup.launch  rs020n_bringup.launch  rs025n_bringup.launch  rs030n_bringup.launch  rs080n_bringup.launch
khi_robot_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
khi_robot_control/include/: khi_robot_client.h  khi_robot_driver.h  khi_robot_hardware_interface.h  khi_robot_krnx_driver.h  krnx.h
khi_robot_control/launch/: khi_robot_control.launch
khi_robot_control/param/: rb_rtc_RS007N.pg  rb_rtc_WD002N.pg
khi_robot_control/src/: khi_robot_client.cpp  khi_robot_hardware_interface.cpp  khi_robot_krnx_driver.cpp  main.cpp
khi_robot_control/tests/: test_main.xml  test_position_velocity.py  test_position_velocity_duaro.xml  test_position_velocity_rs007l.xml  test_position_velocity_rs007n.xml  test_position_velocity_rs080n.xml
khi_robot_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
khi_robot_msgs/srv/: KhiRobotCmd.srv
khi_robot_test/: CHANGELOG.rst  CMakeLists.txt  package.xml
khi_rs007n_moveit_config/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  package.xml
khi_rs007n_moveit_config/config/: khi_rs007n.srdf
khi_rs007n_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  khi_rs007n_moveit_controller_manager.launch.xml  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
khi_rs007n_moveit_config/script/: rs007n_demo.py
khi_rs007n_moveit_config/tests/: roslaunch_test_moveit_rs007n.xml
khi_rs013n_moveit_config/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  package.xml
khi_rs013n_moveit_config/config/: controllers.yaml  joint_limits.yaml  khi_rs013n.srdf  kinematics.yaml  ros_controllers.yaml
khi_rs013n_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  khi_rs013n_moveit_controller_manager.launch.xml  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
khi_rs013n_moveit_config/script/: rs013n_demo.py
khi_rs013n_moveit_config/tests/: roslaunch_test_moveit_rs013n.xml
khi_rs030n_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
khi_rs030n_moveit_config/config/: fake_controllers.yaml  gazebo_khi_rs030n.urdf  khi_rs030n.srdf  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  stomp_planning.yaml
khi_rs030n_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  khi_rs030n_moveit_controller_manager.launch.xml  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
khi_rs030n_moveit_config/tests/: roslaunch_test_moveit_rs030n.xml
khi_rs_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
khi_rs_description/config/: rs007l_joint_limits.yaml  rs007n_joint_limits.yaml  rs020n_joint_limits.yaml  rs025n_joint_limits.yaml  rs030n_joint_limits.yaml  rs080n_joint_limits.yaml
khi_rs_description/launch/: display.launch  world.launch
khi_rs_description/meshes/: RS007L_J2.stl  RS007L_J3.stl  RS007L_J6.stl  RS007N_J6.stl  RS013N_J0.stl  RS013N_J1.stl  RS013N_J2.stl  RS013N_J3.stl  RS013N_J4.stl  RS013N_J5.stl  RS013N_J6.stl  RS020N_J0.stl  RS020N_J1.stl  RS020N_J2.stl  RS020N_J3.stl  RS020N_J4.stl  RS020N_J5.stl  RS020N_J6.stl  RS025N_J0.stl  RS025N_J1.stl  RS025N_J2.stl  RS025N_J3.stl  RS025N_J4.stl  RS025N_J5.stl  RS025N_J6.stl  RS030N_J1.stl  RS030N_J2.stl  RS030N_J3.stl  RS080N_J0.stl  RS080N_J4.stl  RS080N_J5.stl  RS080N_J6.stl
khi_rs_description/tests/: roslaunch_test_rs007l.xml  (+6 more)
khi_rs_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
khi_rs_ikfast_plugin/: CHANGELOG.rst  CMakeLists.txt  khi_rs013n_manipulator_moveit_ikfast_plugin_description.xml  khi_rs020n_manipulator_moveit_ikfast_plugin_description.xml  khi_rs025n_manipulator_moveit_ikfast_plugin_description.xml  khi_rs030n_manipulator_moveit_ikfast_plugin_description.xml  package.xml  update_ikfast_plugin.sh
(+350 files in other folders)
