<?xml version="1.0"?>
<package>
  <name>khi_duaro_gazebo</name>
  <version>1.2.0</version>
  <description>The khi_duaro_gazebo package</description>

  <author email="nakamichi_d@khi.co.jp">nakamichi_d</author>
  <maintainer email="nakamichi_d@khi.co.jp">nakamichi_d</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/khi_robot</url>
  <url type="repository">https://github.com/Kawasaki-Robotics/khi_robot</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros_control</build_depend>
</package>
