<?xml version="1.0"?>
<package>
  <name>khi_rs_description</name>
  <version>1.2.0</version>
  <description>The khi_rs_description package</description>

  <author email="matsui_hiro@khi.co.jp">matsui_hiro</author>
  <maintainer email="matsui_hiro@khi.co.jp">matsui_hiro</maintainer>

  <license>BSD</license>
  <license>KHI CAD license (mesh data, see readme)</license>

  <url type="website">http://ros.org/wiki/khi_robot</url>
  <url type="repository">https://github.com/Kawasaki-Robotics/khi_robot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
</package>
