<?xml version="1.0"?>
<package format="2">
  <name>khi_rs_gazebo</name>
  <version>1.2.0</version>
  <description>The khi_rs_gazebo package</description>
  
  <author email="matsui_hiro@khi.co.jp">matsui_hiro</author>
  <maintainer email="matsui_hiro@khi.co.jp">matsui_hiro</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/khi_robot</url>
  <url type="repository">https://github.com/Kawasaki-Robotics/khi_robot</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>gazebo_ros_control</build_export_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
</package>