<?xml version='1.0' encoding='UTF-8'?>
<package format="2">
  <name>khi_rs_ikfast_plugin</name>
  <version>1.2.0</version>
  <description>The khi_rs_ikfast_plugin package</description>

  <author email="matsui_hiro@khi.co.jp">matsui_hiro</author>
  <maintainer email="matsui_hiro@khi.co.jp">matsui_hiro</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/khi_robot</url>
  <url type="repository">https://github.com/Kawasaki-Robotics/khi_robot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <moveit_core plugin="${prefix}/rs080n_manipulator_moveit_ikfast_plugin_description.xml"/>
    <moveit_core plugin="${prefix}/khi_rs013n_manipulator_moveit_ikfast_plugin_description.xml"/>
  </export>
  <build_depend>moveit_core</build_depend>
  <build_depend>liblapack-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>pluginlib</build_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>liblapack-dev</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>pluginlib</exec_depend>
</package>
